Upgrade Java runtime from 17 to 21 and apply Java 21 language features